refactor: simplify advisor